# Akron

./: .gitignore  AKRON-DESIGN.md  Cargo.toml  DESIGN.md  JOURNEYS.md  LICENSE  PLAN.md  README.md  build.rs
benches/: layout.rs  pipeline.rs
docs/: POSITIONING.md
docs/design/: competing-refs.md  semantic-channel.md
examples/: mrl_dump.rs  simexp.rs  vocab_debug.rs
research/: 01-tool-landscape.md  02-pattern-representation.md  03-problem-evidence.md  04-pattern-language-design.md  05-generalization-and-mining.md
scripts/: perf-layout.sh  perf-pipeline.sh  release.sh
scripts/eval-find/: mrl_analyze.py  questions.json  run.sh
skills/akron/: SKILL.md
src/: align.rs  branch.rs  callrel.rs  cluster.rs  coupling.rs  embed.rs  explain.rs  explore.rs  family.rs  find.rs  fingerprint.rs  history.rs  layout.rs  lib.rs  main.rs  normalize.rs  parse.rs  pca.rs  queries.rs  report.rs  review.rs  run.rs  scan.rs  types.rs
src/assets/: explore.html
tests/: branch.rs  coupling.rs  determinism.rs  explain.rs  explore.rs  find.rs  history.rs  hygiene.rs  is_test_classifier.rs  json_contract.rs  overload.rs  pca.rs  pipeline.rs  review.rs
tests/fixtures/: clone_original.py  clone_renamed.py  competing_async.py  competing_sync.py  ctor_callee.py  ctor_caller.py  drifted_variant.py  generic_disjoint.py  nearmiss_variant.py  overloaded.py  role_guard_classes.py  todict_core.py  todict_member.py  wrapper_callee.py  wrapper_caller.py
